--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /wwwroot/lib
+/wwwroot/jquery-validate
+/wwwroot/jquery-validation-unobtrusive
