--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppName": "Book Store from main json File",
+  "infoObj": {
+    "key1": "key 1 value",
+    "key2": "key 2 value",
+    "key3": {
+      "key3obj1": "key 3 value"
+    }
+  }
 }
