connection strings from appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-SLUHT5R;Database=bookstore;Integrated Security=True;"
+  },
   "AllowedHosts": "*",
   "AppName": "Book Store from main json File",
   "infoObj": {
