read configuration using GetSection method

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,12 @@
   },
   "AllowedHosts": "*",
   "AppName": "Book Store from main json File",
+
+  "NewBookAlert": {
+    "DisplayNewBookAlert": true,
+    "BookName": "A new book xyz.Pdf is released"
+  },
+
   "infoObj": {
     "key1": "key 1 value",
     "key2": "key 2 value",
