--- a/appsettings.json
+++ b/appsettings.json
@@ -13,8 +13,8 @@
   "AppName": "Book Store from main json File",
 
   "NewBookAlert": {
-    "DisplayNewBookAlert": true,
-    "BookName": "A new book xyz.Pdf is released"
+    "DisplayNewBookAlert": false,
+    "BookName": "A new book abc.Pdf is released"
   },
 
   "infoObj": {
