Named options| Map Multiple configurations to single model

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,7 +14,12 @@
 
   "NewBookAlert": {
     "DisplayNewBookAlert": false,
-    "BookName": "A new book abc.Pdf is released"
+    "BookName": "A new book xyz.Pdf is released 11"
+  },
+
+  "ThirdPartyBook": {
+    "DisplayNewBookAlert": true,
+    "BookName": "this the third party book 21"
   },
 
   "infoObj": {
