--- a/Book Store.csproj
+++ b/Book Store.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\images\book\jquery-ajax-unobtrusive\**" />
+    <Content Remove="wwwroot\images\book\jquery-ajax-unobtrusive\**" />
+    <EmbeddedResource Remove="wwwroot\images\book\jquery-ajax-unobtrusive\**" />
+    <None Remove="wwwroot\images\book\jquery-ajax-unobtrusive\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
