--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,10 @@
     "DefaultConnection": "Server=DESKTOP-SLUHT5R;Database=bookstore;Integrated Security=True;"
   },
   "AllowedHosts": "*",
-  "AppName": "Book Store from main json File",
+  "AppName": "Book Store",
+  "Application": {
+    "LoginPath": "/login"
+  },
 
   "NewBookAlert": {
     "DisplayNewBookAlert": false,
